[package]
name = "discord-repost-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
env_logger = "0.11.3"
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
