[package]
name = "discord-repost-checker"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
rusqlite = { version = "0.31.0", features = ["chrono"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8.5"

[[bin]]
name = "migration"
path = "src/migration.rs"
